.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_Objectives__c.object
<CustomObject>
    <description>Records Company wide performance objectives for use in Employee Reviews</description>
    <fields>
        <fullName>xcdhcm__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: need to show only active company objective [JIRA NPPD-305]</description>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Objectives</relationshipLabel>
        <relationshipName>Company_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Objective_Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Objective_Name__c</fullName>
        <label>Objective</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>xcdhcm__Objective_code__c</fullName>
        <label>Objective code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Company Objectives</label>
    <nameField>
        <label>Company goal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>